@@ -1,6 +1,7 @@
 2013-03-15  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Follow-up to #12683: Make TS template constants selectable
+	* Follow-up to #45862: Enable domain model extension: rebuild class cache when updating extensions
 
 2013-03-14  Stanislas Rolland  <typo3@sjbr.ca>
 
